<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".DetailActivity"
    tools:showIn="@layout/activity_detail">


    <Button
        android:id="@+id/button"
        android:layout_margin="@dimen/left_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        android:textColor="@color/white"
        android:background="@color/colorAccent"
        android:layout_marginBottom="@dimen/clipRectBottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/textViewFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/file_name"
        android:layout_marginLeft="@dimen/left_margin"
        app:layout_constraintBottom_toTopOf="@+id/textViewStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_margin"
        android:text="@string/status"
        android:layout_marginLeft="@dimen/left_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFile"/>

    <TextView
        android:id="@+id/textViewFileName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/left_margin_x"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="@dimen/top_margin"
        android:textColor="@color/black"
        android:text="Glide - Image Loading Library by Bumptech"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewFile"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewStatusResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Success"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="@+id/textViewFileName"
        app:layout_constraintTop_toTopOf="@+id/textViewStatus" />


</androidx.constraintlayout.widget.ConstraintLayout>